Profile - fixed course display on smaller devices. Added responsibleness to different elements

--- a/src/main/resources/static/css/profil.css
+++ b/src/main/resources/static/css/profil.css
@@ -131,7 +131,7 @@ body {
             .progress_fill {
                 position: absolute;
                 box-sizing: border-box;
-                width: 0%;
+                width: 0;
                 height: 100%;
                 transition: all 1.25s;
                 border-radius: 10px;
@@ -167,10 +167,29 @@ body {
     min-height: 400px;
     max-height: 500px;
     margin-top: 25px;
-    padding: 20px 15px;
+    padding: 20px 8px;
 }
 
 
+        /*
+        [Custom scroll bar]
+        */
+        .activity_section::-webkit-scrollbar {
+            width: 12px;
+        }
+
+
+        /* Scroll background */
+        .activity_section::-webkit-scrollbar-track {
+            background: #F0EEF0;
+            border-radius: 5px;
+        }
+
+        /* Scroll */
+        .activity_section::-webkit-scrollbar-thumb {
+            background: #C3E1EB;
+            border-radius: 5px;
+        }
 
         #payment_history .activity_section {
             position: relative;
@@ -179,7 +198,7 @@ body {
             width: 100%;
             height: 100%;
             max-height: 320px;
-            padding-bottom: 10px;
+            padding: 0 12px 10px 0;
             overflow-y: auto;
         }
 
@@ -257,7 +276,7 @@ body {
             display: inline-block;
             text-align: center;
             width: 100%;
-            margin-right: 0%;
+            margin-right: 0;
         }
 
             #courses_list {
@@ -325,8 +344,7 @@ body {
 
             #profile_content .heading {
                 font-size: var(--font-size-normal);
-                margin: 0;
-                margin-bottom: 15px;
+                margin: 0 0 15px 0;
             }
 
             #courses_list {
@@ -348,7 +366,7 @@ body {
         #payment_history {
             display: block;
             width: 100%;
-            margin-left: 0%;
+            margin-left: 0;
             margin-top: 30px;
         }
 
@@ -375,15 +393,37 @@ body {
 
     }
     
-    @media screen and (max-width: 360px) {
+    @media screen and (max-width: 380px) {
 
 
         #profile_content {
-            width: 310px;
+            width: 92%;
         }
 
-        #courses_list {
-            padding: 30px 10px;
+        .linear_buttons .button_gray {
+            width: 40%;
+            min-width: 1px;
         }
 
+    }
+
+    @media screen and (max-width: 280px) {
+
+        .progresss_target {
+            display: none;
+        }
+    }
+
+    @media screen and (max-width: 210px) {
+
+        .activity .date {
+            display: block;
+            margin: 0;
+        }
+
+        .activity .price {
+            display: block;
+            width: auto;
+            margin: 5px 0 0 0;
+        }
     }
